Prevent '.app-container' overflow.

--- a/public/css/two-blocks.css
+++ b/public/css/two-blocks.css
@@ -5,6 +5,7 @@ html, body {
 }
 
 .app-container {
+	position: relative;
 	overflow: hidden;
 }
 
